--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint --fix \"**/*.js\"",
-    "prettier": "prettier --write \"**/*.js\""
+    "prettify": "prettier --write \"**/*.js\"",
+    "lintFull": "npm run prettify && npm run lint"
   },
   "eslintConfig": {
     "extends": [
